# bzip2-cmake

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: options.cmake  test.cmake
